# biyingtong

./: .gitignore  CLAUDE.md  README.md  app.py  conftest.py  requirements.txt  tdx_service.py  trading_calendar.py
agents/: __init__.py  context_builder.py  prompt_builder.py  rating.py  runner.py
api/: __init__.py  agents.py  audit.py  backtest_jobs.py  backtests.py  baselines.py  data.py  deploy.py  execution.py  models.py  personas.py  positions.py  proposals.py  rating.py  redlines.py  screener.py  strategies.py  t0.py
backtest/: __init__.py  base.py  book.py  commission.py  cutoff.py  divergence.py  jobs.py  lot_allocator.py  multi_agent_runner.py  portfolio_adapter.py  rule_runner.py  runner.py  stats.py  strategy.py  vnpy_runner.py
data/: hs300_symbols.json
data_schema/: __init__.py  agent_state.py  backtest_state.py  baseline_state.py  deployment_state.py  validation_state.py
execution/: __init__.py  adapter.py  mock.py  tdx.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src-tauri/: Cargo.toml  README.md  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
llm/: __init__.py  base.py  claude.py  factory.py  gemini.py  mock.py  openai_adapter.py
personas/: __init__.py  buffet.py  fuyou.py  intraday_t0.py  linyuan.py  quant_neutral.py  quant_sentiment.py  soros.py
rating/: __init__.py  strategy_rating.py
runner/: __init__.py  agent_process.py  proposal_emitter.py  scheduler.py
static/: index.html
(+356 files in other folders)
